Unified menu and bug fix

--- a/src/main/resources/templates/hero_data.html
+++ b/src/main/resources/templates/hero_data.html
@@ -69,6 +69,8 @@
 		
 	    	<div class="secondaryMenu">
 				<a class="nav-link active" th:href="@{/hero}" >Hős statisztika</a>
+				<a class="nav-link" th:href="@{/hero_actions}" >Hős akciók</a>
+				<a class="nav-link" th:href="@{/market}">Marketplace</a>
 			</div>
 	    
 	    </div>
