"Go to an adventure" action (HM26) finished, on testing.

--- a/src/main/resources/templates/hero_actions.html
+++ b/src/main/resources/templates/hero_actions.html
@@ -95,7 +95,7 @@
 		<br />
 		<input type="button" th:onclick="'window.location.href = \'' + @{/visiting_blacksmith} + '\''" value="Kovácshoz megyek" />
 		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/going_to_mission} + '\''" value="Küldetésre megyek" />
+		<input type="button" th:onclick="'window.location.href = \'' + @{/go_to_an_adventure} + '\''" value="Küldetésre megyek" />
 		
 	</form>
 	
