--- a/src/main/resources/templates/hero_actions.html
+++ b/src/main/resources/templates/hero_actions.html
@@ -31,6 +31,7 @@
 </script> 
 		
 <link rel="stylesheet" type="text/css" href="../css/index.css" />
+<link rel="stylesheet" type="text/css" href="../css/hero_actions.css" />
 
 </head>
 <body>
@@ -71,29 +72,91 @@
 		<a class="nav-link" th:href="@{/logout}" >Kijelentkezés</a>
 	</div>
 	
-	<h1 align="center">Hősöd lehetséges lépései</h1>
+	<br/>
+	<br/>
+	
+	<h1 align="center" th:text="'Kalandra fel, kedves ' + ${sessionData.currentHeroName} + '!'"></h1>
+
+	<br/>
+	<br/>
+	
+	<h3 align="center">Lehetséges lépéseid:</h3>
 	<form action="#" th:action="@{/hero_actions}"method="GET">
 		
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/gathering_water} + '\''" value="Vizért megyek"/>
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/gathering_food} + '\''" value="Vadászni megyek" />
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/hunting_treasure} + '\''" value="Kincsre vadászok" />
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_welldrilling_skill} + '\''" 
-		value="Kútfúró képességet fejlesztek" />
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_hunting_skill} + '\''" 
-		value="Vadászó képességet fejlesztek" />
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_astronomer_skill} + '\''" 
-		value="Csillagvizsgáló képességet fejlesztek" />
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_treasure_hunter_skill} + '\''" 
-		value="Kincsvadász képességet fejlesztek" />
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/go_to_an_adventure} + '\''" value="Küldetésre megyek" />
+	<div class="actionsMenu" align="center">
+		<table align="center">
+			<tr>
+		    	<th colspan="3">Akció leírása</th>
+		    	<th colspan="1">Akció</th>
+		  	</tr>
+		  	<tr>
+		  		<td colspan="3">A víz nélkülözhetetlen a túléléshez. A Marson korlátoltak a lehetőségek a vízszerzésre.
+					A vízszerzés sikerét, a megszerzett víz mennyiségét a Kútfúró képesség szintje és a Bölcsesség szintje egyaránt
+					befolyásolja.<br/></td>
+				<td colspan="1">
+					<input type="button" class="actionbutton" th:onclick="'window.location.href = \'' + @{/gathering_water} + '\''" 
+					value="Vizért megyek"/>
+				</td>
+		  	</tr>
+		  	<tr>
+		  		<td colspan="3">Enni kell ha életben akarsz maradni. A vadászat sikerét és a megszerzett étel mennyiségét a 
+		  		Vadászó képesség szintje és a Bölcsesség szintje egyaránt befolyásolja.<br/></td>
+				<td colspan="1">
+					<input type="button" class="actionbutton" th:onclick="'window.location.href = \'' + @{/gathering_food} + '\''" 
+					value="Vadászni megyek" />
+				</td>
+		  	</tr>
+		  	<tr>
+		  		<td colspan="3">Pénzre lesz szükséged, ha majd eszközöket szeretnél vásárolni. A Marson kincsvadászatra 
+		  		mehetsz, hogy további pénzre tegyél szert. A megszerzett pénz mennyiségét befolyásolja a bölcsességed mértéke<br/></td>
+				<td colspan="1">
+					<input type="button" class="actionbutton" th:onclick="'window.location.href = \'' + @{/hunting_treasure} + '\''" 
+					value="Kincsre vadászok" />
+				</td>
+		  	</tr>
+		  	<tr>
+		  		<td colspan="3">A Kútfúró képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
+		  		szintre jutsz, annál több vizet szerezhetsz. A megszerzett képességek további jellemzőidet befolyásolják.<br/></td>
+				<td colspan="1">
+					<input type="button" class="actionbutton" th:onclick="'window.location.href = \'' + @{/learning_welldrilling_skill} + '\''" 
+					value="Kútfúró képességet fejlesztek" />
+				</td>
+		  	</tr>
+		  	<tr>
+		  		<td colspan="3">A Vadászó képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
+		  		szintre jutsz, annál több élelmet szerezhetsz. A megszerzett képességek további jellemzőidet befolyásolják.<br/></td>
+				<td colspan="1">
+					<input type="button" class="actionbutton" th:onclick="'window.location.href = \'' + @{/learning_hunting_skill} + '\''" 
+					value="Vadászó képességet fejlesztek" />
+				</td>
+		  	</tr>
+		  	<tr>
+		  		<td colspan="3">A Csillagvizsgló képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
+		  		szintre jutsz, annál több bölcsességre teszel  szert.<br/></td>
+				<td colspan="1">
+					<input type="button" class="actionbutton" th:onclick="'window.location.href = \'' + @{/learning_astronomer_skill} + '\''" 
+					value="Csillagvizsgáló képességet fejlesztek" />
+				</td>
+		  	</tr>
+		  	<tr>
+		  		<td colspan="3">A Kincsvadász képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
+		  		szintre jutsz, annál több pénzt szerezhetsz a kincsvadászaton.<br/></td>
+				<td colspan="1">
+					<input type="button" class="actionbutton" th:onclick="'window.location.href = \'' + @{/learning_treasure_hunter_skill} + '\''" 
+					value="Kincsvadász képességet fejlesztek" />
+				</td>
+		  	</tr>
+		  	<tr>
+		  		<td colspan="3">Küldetésre mehetsz, hogy új eszközökre tegyél szert. A küldetésed sikerét a Kincsvadászó képességed
+		  		és a bölcsességed egyaránt befolyásolja.<br/></td>
+				<td colspan="1">
+					<input type="button" class="actionbutton" th:onclick="'window.location.href = \'' + @{/go_to_an_adventure} + '\''" 
+					value="Küldetésre megyek" />
+				</td>
+		  	</tr>
+
+		</table>
+	</div>
 		
 	</form>
 	
