Item display and selection logic is working

--- a/src/main/resources/templates/hero_data.html
+++ b/src/main/resources/templates/hero_data.html
@@ -74,7 +74,8 @@
 	    	<div class="secondaryMenu">
 				<a class="nav-link active" th:href="@{/hero}" >Hős statisztika</a>
 				<a class="nav-link" th:href="@{/hero_actions}" >Hős akciók</a>
-				<a class="nav-link" th:href="@{/market}">Marketplace</a>
+				<a class="nav-link" th:href="@{/market}">Piactér</a>
+				<a class="nav-link active" th:href="@{/smith}">Kovácsműhely</a>
 			</div>
 	    
 	    </div>
