bugfix href to mainpage

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
 		
 			<ul class="nav nav-tabs justify-content-center">
 				<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/index}">Főoldal</a>
+		        	<a class="nav-link" th:href="@{/main}">Főoldal</a>
 		      	</li>
 		      	<li class="nav-item">
 		        	<a class="nav-link" th:href="@{/register}">Regisztráció</a>
