--- a/src/main/resources/templates/smith.html
+++ b/src/main/resources/templates/smith.html
@@ -31,7 +31,7 @@
 
 			<ul class="nav nav-tabs justify-content-center">
 				<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/index}">Főoldal</a>
+		        	<a class="nav-link" th:href="@{/main}">Főoldal</a>
 		      	</li>
 		      	<li class="nav-item">
 		        	<a class="nav-link" th:href="@{/register}" th:unless="${sessionData.currentUserName != null}" >Regisztráció</a>
